cmake_minimum_required(VERSION 3.20)
project(Google_tests)
set(CMAKE_CXX_STANDARD 17)
add_subdirectory(src)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

add_executable(Google_Tests_run heap_test.cpp encoder_test.cpp)
add_library(archiver_lib ../trie.cpp ../heap.cpp ../node.cpp ../datawriter.cpp ../datawriter.h ../datareader.cpp ../datareader.h ../encoder.cpp ../encoder.h ../archiver.cpp ../archiver.h ../unarchiver.cpp ../unarchiver.h)
target_link_libraries(Google_Tests_run archiver_lib)
target_link_libraries(Google_Tests_run gtest gtest_main)
